--- a/index.html
+++ b/index.html
@@ -1,74 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-
 <head>
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<title>About Me in Bootstrap</title>
 
-	<title>Week 1 Homework</title>
+	<link rel="stylesheet" type="text/css" href="style_bs_josie.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
 </head>
 
 <body>
 
-	<div class="container">
-
-	<div id="header">
-		<div class="main">
-				<div class="name_tag">
-					<h1 class="name_tag_text">Josephine Pizzolato</h1>
-			</div>
+	<div id="wrapper">
+		<nav class="navbar navbar-default">  
+			<div class="container-fluid">
 			
-			<div class="nav">
-				<ul class="main_nav">
-					<li class="main_list"><a class="active" href="index.html">About</a></li>
-					<li class="main_list"><a href="portfolio.html">Projects</a></li>
-					<li class="main_list"><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
+				<div class="navbar-header"> 
+					<button aria-expanded="false" data-target="#bs-example-navbar-collapse-7" data-toggle="collapse" class="navbar-toggle collapsed" type="button"> 
+					<span class="sr-only">Toggle navigation</span> 
+					<span class="icon-bar"></span> 
+					<span class="icon-bar"></span> 
+					<span class="icon-bar"></span> 
+					</button>
+					<p class="navbar-brand">Josephine Pizzolato</p>
+				</div> 
 
-		<section id="main-bio">
+				<div id="bs-example-navbar-collapse-7" class="collapse navbar-collapse"> 
+					<ul class="nav navbar-nav"> 
+						<li class="active"><a href="#">About</a></li> 
+						<li><a href="#">Projects</a></li> 
+						<li><a href="#">Contact</a></li> 
+					</ul> 
+				</div> 
 
-			<h2>About Josephine Pizzolato</h2>
+			</div> 
+		</nav> 
 
-			<img id="bio-image" src="./assets/images/Josie_2016.jpg" width="170px" height="200px" alt="Josie's Image" alt="left">
+		<div class="container">
+  <h3>Basic Navbar Example</h3>
+  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+</div>
 
-			<p class="main-bio-text">Josephine Pizzolato's diverse career path has led her from Sales &amp; Marketing to Design &amp; Art Director to Web Developer. While these stops may seem varied, she'll be the first to tell you that the diversity prepared her well for her current role as Front End Developer.</p>
-
-			<p class="main-bio-text">Working in the technology field that is experiencing a nearly constant evolution, Josephine is dedicated to pushing herself both creatively and technically -- whether it's researching industry trends or jumping into new programming languages. It's the same fierce drive that led her to realize that in a male-dominated field sometimes a woman has to assert herself and proactively pursue opportunities. Sometimes being a woman means asking for what you want.</p>
-			
-			<p class="main-bio-text">It might be a challenge, but Josephine is proof that it's certainly one worth taking.</p>
-</p>
-		</section>
-
-		<section id="contact-info">
-			<h2>Contact Info</h2>
-
-		<div class="list-share">
-      <ul>
-		    <li class="git_hub">
-		    		<a class="git_hub" href="https://github.com/josiepizzo" target="_blank"><img alt="Git Hub Logo" src="./assets/images/git_logo.png" width="52px" height="52px"></a>
-		    </li>
-		    <li class="twitter">
-		        <a class="twitter" href="https://twitter.com/josiepizzo" target="_blank"><img alt="Twitter Logo" src="./assets/images/twitter_logo.png" width="52px" height="52px"></a>
-		    </li>
-		    <li class="linkedin">
-		        <a class="linkedin" href="https://www.linkedin.com/in/josiepizzolato" target="_blank"><img alt="LinkedIn Logo" src="./assets/images/linkedin_logo.png" width="52px" height="52px"></a>
-		    </li>
-			</ul>
-     </div>
-
-	</section>
-
-		<div id="footer">
-			<div class="box-featured">
-				<h4>The <span>Josie Pizzolato</span> web page. @2016</h4>
-			</div>
-		</div>
-
-	</div>
-
+</div>
+	
 </body>
 </html>
