added pages and some new css code

--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,13 @@
 	
 	<title>About Me in Bootstrap</title>
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style_bs_josie.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
 </head>
 
 <body>
+	<a class="screen-reader" href="#content">Skip to main content</a>
 
 	<div id="wrapper">
 
@@ -30,31 +31,19 @@
 
 				<div id="bs-example-navbar-collapse-7" class="collapse navbar-collapse"> 
 					<ul class="nav navbar-nav"> 
-						<li class="active"><a href="index.html">About</a></li> 
+						<li><a href="index.html">About</a></li> 
 						<li><a href="projects.html">Projects</a></li> 
-						<li><a href="contact.html">Contact</a></li> 
+						<li class="active"><a href="contact.html">Contact</a></li> 
 					</ul> 
 				</div> 
 
 			</div> 
 		</nav> 
 
-<div class="row" id="content">
-	<div class="col-md-8">
-  	<h3>Basic Navbar Example</h3>
-  </div>
-
-  	<div class="row">
-  		<div class="col-md-3">
-  			<img src="http://placehold.it/150x150" alt="placeholder" class="img-thumbnail"></div>
-  			<div class="col-md-9">
-  				<p>Help me</p>
-  				</div>
-  	</div>
-
-  <div class="col-md-4">
-  	<p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-	</div>
+		<div class="container" id="content">
+  <h3>Basic Navbar Example</h3>
+  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+</div>
 
 </div>
 	
